--- a/01_agama/samyukta/01/SA1_11-14.md
+++ b/01_agama/samyukta/01/SA1_11-14.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 11-14 (8). The Past Is Impermanent, Painful, Empty, and Not Self'
+title: 'The Related Discourses | 1. The Aggregates | 11-14 (8). The Present Is Impermanent, Painful, Empty, and Not Self'
 type: kramdown
 base: ../../../
 previous: SA1_10.html
-next: SA1_11.html
+next: SA1_15.html
 ---
 
 # [The Related Discourses](../index.html)
@@ -14,10 +14,10 @@ next: SA1_11.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Past and future form are [11] impermanent … [12] painful … [13] empty … [14] not self, so why wouldn’t that be for present form? Noble disciples who thus observe them don’t look back to past form or wish for future form. Regarding present form, they become disillusioned, free of desire, and properly headed for its cessation.
+2\. It was then that the Bhagavān addressed the monks, “Past and future form are [11] impermanent … [12] painful … [13] empty … [14] not self, so why wouldn’t that be for present form? Noble disciples who observe them in this way don’t look back to past form or wish for future form. Regarding present form, they become disillusioned, free of desire, and headed straight to its cessation.[\[2\]](#n2){:#ref2}
 {:#p2}
 
-3\. “Thus, past and future feeling … conception … volition … consciousness are [11] impermanent … [12] painful … [13] empty … [14] not self, so why wouldn’t that be for present feeling … conception … volition … consciousness? Noble disciples who thus observe them don’t look back to past consciousness or wish for future consciousness. Regarding present consciousness, they become disillusioned, free of desire, and properly headed for its cessation.”
+3\. “Thus, past and future feeling … conception … volition … consciousness are [11] impermanent … [12] painful … [13] empty … [14] not self, so why wouldn’t that be for present consciousness? Noble disciples who observe them in this way don’t look back to past consciousness or wish for future consciousness. Regarding present consciousness, they become disillusioned, free of desire, and headed straight to its cessation.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -27,13 +27,14 @@ next: SA1_11.html
 
 ### Notes
 
-1. {:#n1} This sūtra and the next three are parallel with [SN 22.9](https://suttacentral.net/sn22.9){:target="_blank"}-[11](https://suttacentral.net/sn22.11){:target="_blank"}. SN lacks a direct parallel for [SĀ 1.13](SA1_13){:target="_blank"}, which characterizes the five aggregates as empty. [\[back\]](#ref1)
+1. {:#n1} This group of <em>sūtra</em>s are parallel with <a href="https://suttacentral.net/sn22.9" target="_blank">SN 22.9</a>-<a href="https://suttacentral.net/sn22.11" target="_blank">11</a>. The Pali lacks a direct parallel for the <em>sūtra</em> on the emptiness of the aggregates (<a href="SA1_13.html" target="_blank">SĀ 1.13</a>), which is a general pattern in SN. The Theravādins didn’t include emptiness in the standard list of negative aspects attributed to conditioned things that arise and perish. [\[back\]](#ref1)
+2. {:#n2} <em>headed straight to</em>. C. 正向. Here, 正 is likely read as “exact” rather than “correct,” and 向 means a heading or facing. Together, they mean “headed directly toward.” The Pali parallel here appears to be the past particle P. <em>paṭipanna</em> (= G. <em>paḍipaṃna</em>, S. <em>pratipanna</em>), but there it applies to all three steps rather than just the last one (i.e., cessation). Both P. <em>paṭipanna</em>  and S. <em>pratipanna</em> can mean “entered,” “arrived,” or “approached,” which generally matches the C. reading. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 19 December 2023
 {: .revised}
 
 ---
