--- a/01_agama/samyukta/01/SA1_16.md
+++ b/01_agama/samyukta/01/SA1_16.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 16 (10). Liberation'
+title: 'The Related Discourses | 1. The Aggregates | 16 (10). Teaching Liberation'
 type: kramdown
 base: ../../../
 previous: SA1_15.html
@@ -14,10 +14,10 @@ next: SA1_17.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true and correct observation. Thus, feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true and correct observation.
+2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called a true observation. Thus, feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called true observation.
 {:#p2}
 
-3\. “Noble disciples who thus observe it are liberated from form and liberated from feeling … conception … volition … consciousness. I say that this is complete liberation from birth, old age, illness, death, grief, sorrow, pain, and trouble.”
+3\. “Noble disciples who observe it in this way are liberated from form … liberated from sensation … conception … volition … consciousness. I say that this is liberation[\[2\]](#n2){:#ref2} from birth, old age, illness, death, grief, sorrow, pain, and trouble.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -27,13 +27,14 @@ next: SA1_17.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.15](https://suttacentral.net/sn22.15){:target="_blank"} and similar to [SN 22.16](https://suttacentral.net/sn22.16){:target="_blank"} and [17](https://suttacentral.net/sn22.17){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is a variant of the previous one (<a href="SA1_15.html" target="_blank">SĀ 1.15</a>), and both are parallel with <a href="https://suttacentral.net/sn22.15" target="_blank">SN 22.15</a> and similar to <a href="https://suttacentral.net/sn22.16" target="_blank">SN 22.16-17</a>. See the notes to SĀ 1.15 for more discussion of these parallels. [\[back\]](#ref1)
+2. {:#n2} <em>this is liberation</em>. C. 是等解脫. The parallel passage in <a href="SA1_18.html" target="_blank">SĀ 1.18</a> reads 是等<strong>為</strong>解脫, which makes a bit more sense than 等解脫. It means that liberation from the five aggregates (是等, “these things”) is liberation from suffering. As the <cite>Taisho</cite> reads here, I would take 等解脫 to mean “complete” or “thorough liberation” (S. *<em>sama</em> or <em>sam-</em> + (vi)mokṣa</em>?). But I think this is a case of inattentive copying leading to minor omissions. In this case, 為 was lost. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 19 December 2023
 {: .revised}
 
 ---
