--- a/01_agama/samyukta/01/SA1_17.md
+++ b/01_agama/samyukta/01/SA1_17.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 17 (11). Causes and Conditions'
+title: 'The Related Discourses | 1. The Aggregates | 17 (11) Causes and Conditions'
 type: kramdown
 base: ../../../
 previous: SA1_16.html
@@ -17,26 +17,27 @@ next: SA1_18.html
 2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes and conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Thus, feeling … conception … volition … consciousness is impermanent. Whatever causes and conditions give rise to consciousnesses, they are also impermanent. How could consciousnesses that arise from impermanent causes and conditions be permanent?
 {:#p2}
 
-3\. “Thus, monks, form is impermanent … Feeling … Conception … Volition … Consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self.
+3\. “Thus, monks, form is impermanent. Feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self.
 {:#p3}
 
-4\. “Noble disciples who thus observe it become disillusioned with form … become disillusioned with feeling … conception … volition … consciousness. Being disillusioned, they don’t enjoy it. Not enjoying it, they are liberated. Being liberated, they know and see: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+4\. “Noble disciples who observe it in this way become disillusioned with form … become disillusioned with feeling … conception … volition … consciousness. Being disillusioned, they don’t enjoy it. Not enjoying it, they are liberated. Being liberated, they know and see: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p4}
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
+5\. When the monks who heard what the Buddha taught, they rejoiced and approved.
 {:#p5}
 
 ---
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.18](https://suttacentral.net/sn22.18){:target="_blank"} and similar to [SN 22.19](https://suttacentral.net/sn22.19){:target="_blank"} and [20](https://suttacentral.net/sn22.20){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.18" target="_blank">SN 22.18</a> and similar to <a href="https://suttacentral.net/sn22.19" target="_blank">SN 22.19-20</a>. SN 22.18-20 take up each of the three negative aspects of conditioned things and apply them also to the causes and conditions that give rise to conditioned things.<br/>
+Here, both SĀ 1.17-18 do the same only regarding the impermanence of conditioned things. They then restate the argument that something impermanent is painful, not self, and doesn’t belong to self (which isn’t included in SN 22.18-20). As with <a href="SA1_15.html" target="_blank">SĀ 1.15-16</a>, these two <em>sūtra</em>s differ only in describing the noble disciple’s liberation in two equivalent ways. Thus, we could group all five <em>sūtra</em>s (i.e., SN 22.18-20 and SĀ 1.17-18) together as part of a larger set of variants. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 19 December 2023
 {: .revised}
 
 ---
