--- a/01_agama/samyukta/01/SA1_19.md
+++ b/01_agama/samyukta/01/SA1_19.md
@@ -14,19 +14,19 @@ next: SA1_20.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If sentient beings didn’t enjoy form, then they wouldn’t be stained by it. It’s because they do enjoy form that sentient beings have defiled attachment to it. Thus, when sentient beings don’t enjoy feeling … conception … volition … consciousness, they aren’t stained by it. It’s because sentient beings do enjoy feeling … conception … volition … consciousness that they have defiled attachment to it.
+2\. It was then that the Bhagavān addressed the monks, “If sentient beings didn’t enjoy form, then they wouldn’t be affected by it.[\[2\]](#n2){:#ref2} It’s because they do enjoy form that sentient beings are affected and attached to it. Thus, when sentient beings don’t enjoy feeling … conception … volition … consciousness, they aren’t affected by it. It’s because sentient beings do enjoy feeling … conception … volition … consciousness that they are affected and attached to it.
 {:#p2}
 
-3\. “Monks, if form weren’t trouble for sentient beings, then sentient beings wouldn’t become disillusioned with it. It’s because form is trouble for sentient beings that they do become disillusioned with it. Thus, if feeling … conception … volition … consciousness wasn’t trouble for sentient beings, they wouldn’t become disillusioned with it. It’s because feeling … conception … volition … consciousness is trouble for sentient beings that they do become disillusioned with it.
+3\. “Monks, if form weren’t trouble for sentient beings, then sentient beings wouldn’t become disillusioned with it. It’s because form is trouble for sentient beings that they do become disillusioned with it. Thus, if feeling … conception … volition … consciousness wasn’t trouble for sentient beings, they wouldn’t become disillusioned with it. It’s because feeling … perception … volition … consciousness is trouble for sentient beings that they do become disillusioned with it.
 {:#p3}
 
 4\. “Monks, if sentient beings had no escape from form, then sentient beings wouldn’t escape from it. It’s because sentient beings have an escape from form that they do escape from it. Thus, if sentient beings had no escape from feeling … conception … volition … consciousness, they wouldn’t escape from it. It’s because sentient beings have an escape from feeling … conception … volition … consciousness that they do escape from it.
 {:#p4}
 
-5\. “Monks, if I didn’t truly know the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I wouldn’t be freed from, escaped from, and parted with [bondage]. I would have forever stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I couldn’t have realized my attainment of the unsurpassed and complete awakening.
+5\. “Monks, if I didn’t truly know the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I wouldn’t be freed, escaped, and parted with them. I would have forever stood in delusion among gods like Māra or Brahmā,  ascetics and priests, or the assemblies of gods and humans, and I couldn’t have realized my attainment of the unsurpassed and complete awakening.[\[3\]](#n3){:#ref3}
 {:#p5}
 
-6\. “Monks, it’s because I truly knew the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape that I was freed from, escaped from, parted with, and liberated from bondage. I never again stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I could realize my attainment of the unsurpassed and complete awakening.”
+6\. “Monks, it’s because I truly knew the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape that I was freed, escaped, parted, and liberated from bondage. I never again stood in delusion among gods like Māra or Brahmā,  ascetics and priests, or the assemblies of gods and humans, and I could realize my attainment of the unsurpassed and complete awakening.”
 {:#p6}
 
 7\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -36,13 +36,15 @@ next: SA1_20.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.28](https://suttacentral.net/sn22.28){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> and the next correspond to <a href="https://suttacentral.net/sn22.26" target="_blank">SN 22.26-28</a>, and this <em>sūtra</em> is closest to SN 22.27-28. The beginning matches SN 22.28 while the conclusion matches SN 22.27. [\[back\]](#ref1)
+2. {:#n2} <em>affected</em>. C. 染. The parallel term in SN 22.28 is P. <em>sārajjati</em> (S. <em>saṁrajyate</em>). Interestingly, the S. equivalent of this word means “to dye, turn red, become affected by passion.” This matches 染, which normally means “to stain, dye, or color” things such as fabric. Psychologically, it can refer to people being influenced by something or someone else. All in all, I would say the word in this passage means “to be affected” or “impassioned.” The common reading of “to be defiled” would be an extension of the negative context of passages like this, not to mention that soiled fabric is often stained by dirt. But here the reading is psychological, not literal, so I have rendered it to English accordingly. [\[back\]](#ref2)
+3. {:#n3} <em>unsurpassed and complete awakening</em>. C. 阿耨多羅三藐三菩提 (EMC. <em>•a-nəu-ta-la sam-miɛu sam-bo-dei</em>), G. <em>anutara saṃma saṃboj̄a</em>, P. <em>anuttara sammā sambodhi</em>, S. <em>anuttara samyak saṃbodhi</em>. This expression, which became quite common in later works, usu. only applies to the awakening of the Buddha, as is the case here. Lit., it means the “unsurpassed, correct, and complete awakening.” I’ve contracted the expression a bit for brevity. [\[back\]](#ref3)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 19 December 2023
 {: .revised}
 
 ---
