--- a/01_agama/samyukta/01/SA1_21.md
+++ b/01_agama/samyukta/01/SA1_21.md
@@ -14,52 +14,57 @@ next: SA1_22.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. At the time, a certain monk went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to stand to one side. He said, “It’d be excellent, Bhagavān, if you would briefly explain the teaching for me now. After hearing the teaching, I’ll go alone to a quiet place and cultivate it earnestly. After cultivating it earnestly, I’ll again contemplate: ‘It’s because a good man leaves home, shaves his hair, puts on the Dharma robes, becomes faithful, goes homeless, and leaves home to train in the ultimate and unsurpassed religious life that he realizes in the present life: “My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.”’”
+2\. At the time, a certain monk came to the Buddha. He bowed his head at the Buddha’s feet, and withdrew to stand to one side. He then said, “It’d be good, Bhagavān, if you would briefly explain the teaching for me now. After hearing the teaching, I’ll go alone to a quiet place and cultivate it earnestly. After cultivating it earnestly, I’ll again contemplate: ‘A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home [to train on the path]. That’s the way he reaches the ultimate and unsurpassed religious life. He’ll realize in the present life: “My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.”’”
 {:#p2}
 
-3\. The Bhagavān told that monk, “Good, monk! Good! You’ve expressed yourself gladly, saying, ‘Would you briefly explain the teaching for me now? After I’ve heard the teaching, I’ll go alone to a quiet place and cultivate it earnestly … “I myself know that I won’t be subject to a later existence.”’ Is this what you’ve asked?”
+3\. The Bhagavān told that monk, “Good, good! Monk, I’m glad you’ve said, ‘[Bhagavān,] give me a brief explanation of the Dharma. From that brief explanation of the Dharma, I will get a full understanding of its meaning. I’ll go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence’”’? Is this what you said?”
 {:#p3}
 
-The monk said to the Buddha, “So it is, Bhagavān.”
+The monk said to the Buddha, “Yes, Bhagavān.”
 
-4\. The Buddha told the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, if someone follows the tendencies, then they’re following death.[\[2\]](#n2){:#ref2} If someone follows death, then they’re bound by grasping. Monk, if someone doesn’t follow the tendencies, then they aren’t following death. Not following death, they are freed from grasping.”
+
+4\. The Buddha told the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, if something brings about the tendencies, then it brings about death.[\[2\]](#n2){:#ref2} If something brings about death, then it’s bound by grasping. Monk, if it doesn’t bring about the tendencies, then it won’t bring about death. If something doesn’t bring about death, then it’s freed from grasping.”
 {:#p4}
 
 The monk said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”
 
-5\. The Buddha asked the monk, “How exactly do you understand the meaning of my brief explanation of the teaching?”
+
+5\. The Buddha asked the monk, “How do you understand the meaning of my brief explanation of the Dharma in full?”
 {:#p5}
 
-6\. The monk said to the Buddha, “Bhagavān, form follows the tendencies, and form follows death. Someone who follows the tendencies and follows death is bound by grasping. Thus, feeling … conception … volition … consciousness follows the tendencies, and consciousness follows death. Someone who follows the tendencies and follows death is bound by grasping.
+6\. The monk said to the Buddha, “Bhagavān, form brings about the tendencies, and form brings about death. Something that brings about the tendencies and death is bound by grasping. Thus, feeling … conception … volition … consciousness brings about the tendencies, and consciousness brings about death. Something that brings about the tendencies and brings about death is bound by grasping.
 {:#p6}
 
-7\. “Bhagavān, when form doesn’t follow the tendencies, it doesn’t follow death.^Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping.^Thus, if feeling … conception … volition … consciousness doesn’t follow the tendencies, it doesn’t follow death.^Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping.^Thus do I understand the Bhagavān’s brief explanation of the teaching.”
+7\. “Bhagavān, if form doesn’t bring about the tendencies, it won’t bring about death. Something that doesn’t bring about the tendencies and doesn’t bring about death is freed from grasping. Thus, if feeling … conception … volition … consciousness doesn’t bring about the tendencies, it won’t bring about death. Something that doesn’t bring about the tendencies and doesn’t bring about death is freed from grasping. I understand the Bhagavān’s brief explanation of the teaching in this way.”
 {:#p7}
 
-8\. The Buddha told the monk, “Good, good! That’s a detailed understanding of the meaning of my brief explanation. Why is that? When form follows the tendencies, it follows death. Someone who follows the tendencies and follows death is bound by grasping. Thus, when feeling … conception … volition … consciousness follows the tendencies, it follows death. Someone who follows the tendencies and follows death is bound by grasping.
+8\. The Buddha told the monk, “Good! It’s good, monk, that you understand the meaning of my brief explanation of the Dharma in full. Why is that? If form brings about the tendencies, it brings about death. Something that brings about the tendencies and brings about death is bound by grasping. Thus, if feeling … conception … volition … consciousness brings about the tendencies, it brings about death. Something that brings about the tendencies and brings about death is bound by grasping.
 {:#p8}
 
-9\. “Monk, when form doesn’t follow the tendencies, it doesn’t follow death. Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping. Thus, when feeling … conception … volition … consciousness doesn’t follow the tendencies, it doesn’t follow death. Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping.”
+9\. “Monk, if form doesn’t bring about the tendencies, it won’t bring about death. Something that doesn’t bring about the tendencies and doesn’t bring about death is freed from grasping. Thus, if feeling … conception … volition … consciousness doesn’t bring about the tendencies, it won’t bring about death. Something that doesn’t bring about the tendencies and doesn’t bring about death is freed from grasping.”
 {:#p9}
 
-10\. When that monk heard what the Buddha taught, he felt great joy. He bowed to the Buddha and withdrew. He stayed alone in a quiet place, diligently trained, and lived earnestly. After diligently training and living earnestly, he contemplated this: “Because a good man leaves home, shaves his hair, puts on the Dharma robes, becomes faithful, goes homeless, and leaves home … ‘I myself know that I won’t be subject to a later existence.’”
+10\. When that monk heard what the Buddha taught, he felt great joy. He bowed to the Buddha and withdrew. He went alone to a quiet place where he diligently trained and lived earnestly. After diligently training and living earnestly, he thought, “A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home … <em>up to</em> … ‘I myself know that I won’t be subject to a later existence.’”
 {:#p10}
 
-11\. When that monk became an arhat, his mind was liberated.
+11\. That monk then became an <em>arhat</em>, and his mind was liberated.
 {:#p11}
 
 ---
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.35-36](https://suttacentral.net/sn22.35){:target="_blank"} and similar to [SN 22.63-65](https://suttacentral.net/sn22.63){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} <em>follows the tendencies … follows death</em>. Ch. 隨使使…隨使死. The exact meaning of 隨使 is unclear and appears to be an invention by the Chinese translator (or perhaps 隨使 should be emended to 隨 or 隨順). I’ve translated it conservatively as “follow,” but I believe it may mean “to serve.” On the reading of the Pali equivalent to 隨使死 (anumīyati) found in [SN 22.36](https://suttacentral.net/sn22.36){:target="_blank"}, see Bodhi’s note 49 on p.1053-4 of <em>Connected Discourses</em>, Vol. I. He says Spk reads the term as equivalent to Skt. anumṛyate ("dies along with"), which would agree with the Chinese. [\[back\]](#ref2)
+1. {:#n1} This <em>sūtra</em> and the next are parallel to <a href="https://suttacentral.net/sn22.36/en/sujato" target="_blank">SN 22.36</a> and share the same template as <a href="https://suttacentral.net/sn22.35/en/sujato" target="_blank">SN 22.35</a>. The differences between the C. and P. appear to revolve around the reading of Prakrit <em>anumīyati</em>. The Theravāda tradition reads it as an synonym of P. <em>saṅkha</em> (which can be a unit of measure). The present version instead reads it as equiv. to S. <em>anumṛyate</em> and also adds additional words to the passage in question. See the note below for more on these language issues. [\[back\]](#ref1)
+2. {:#n2} <em>brings about the tendencies … brings about death</em>. C. 隨使使⋯隨使死, P. <em>anuseti … anumīyati</em>. This is one of the most difficult passages in SĀ. The exact meaning of 隨使使 is unclear. It could be a textual corruption, as it only occurs in this and the next <em>sūtra</em>. Nor can I find any evidence that 隨使 had an idiomatic meaning in C. Therefore, I’ve read the first 使 in its general C. meaning for causing something to happen, which is used in various personal and impersonal contexts. I take the second 使 as a translation S. <em>anuśaya</em>. Lit., it means something like “instigator,” but I translate it as “tendency” since Buddhists used <em>anuśaya</em> as a technical term for the afflictions when they are dormant but not yet eliminated. This makes 隨 either a coverb or adverb meaning “following” or “consequently.” Since this passage puts each of the five aggregates into the subject position, I’ve opted to read 者 as referring to “something” rather than “someone.”<br/>
+The lit. meaning of 隨使使者 then would be “something that consequently brings about the tendencies” or “something that follows the bringing about of the tendencies.” I’ve opted for the former reading because Buddhist texts commonly treat the aggregates and senses as the external stimuli that activate afflictions like desire or dislike. I’ve shortened that reading to “something that brings about the tendencies” for brevity.<br/>
+On the reading of the Pali equivalent to 隨使死 found in SN 22.36 (i.e., <em>anumīyati</em>), see Bodhi <cite>Connected Discourses</cite> Vol. I, 1053-4 n. 49. He says the Pali commentary reads the term as equivalent to S. <em>anumṛyate</em> (“follows in death”) and that the <em>anuśaya</em> cease when the aggregates do. Bodhi and other Pali translators don’t take this reading seriously, but it in fact agrees somewhat with the Chinese parallel here. The difference is that the C. gives us no indication that the aggregates bring about the death of the tendencies, as the Pali commentator claims. The straightforward reading of the C. passage is that the aggregates cause death (because they are impermanent), and therefore they are subject to grasping (for the same reason).<br/>
+The subtext of this passage seems to be that a person lives and dies as a result of their attachment to an impermanent existence. This in turn brings about the latent afflictions that trouble them while they exist. However, if a person has no attachment to this impermanent existence, then impermanent things can’t trouble them. This would presumably describe an <em>arhat</em>. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 19 December 2023
 {: .revised}
 
 ---
