--- a/01_agama/samyukta/01/SA1_15.md
+++ b/01_agama/samyukta/01/SA1_15.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 15 (9). Disillusionment'
+title: 'The Related Discourses | 1. The Aggregates | 15 (9). Teaching Disillusionment'
 type: kramdown
 base: ../../../
-previous: SA1_14.html
+previous: SA1_11-14.html
 next: SA1_16.html
 ---
 
@@ -14,10 +14,10 @@ next: SA1_16.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self, either. Such observation is called true and correct observation. Thus, feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self, either. Such an observation is called a true and correct observation.
+2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called true and correct observation.[\[2\]](#n2){:#ref2} Thus, feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called a true observation.
 {:#p2}
 
-3\. “Noble disciples who thus observe form become disillusioned with it. They become disillusioned with feeling … conception … volition … consciousness. Because they’re disillusioned, they don’t enjoy them. Because they don’t enjoy them, they attain liberation. For someone who’s liberated, this true knowledge arises: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+3\. “Noble disciples who observe it in this way become disillusioned with form … become disillusioned with sensation … conception … volition … consciousness. Because they’re disillusioned, they don’t enjoy them. Because they don’t enjoy them, they attain liberation. This true knowledge arises in someone who is liberated: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -27,13 +27,15 @@ next: SA1_16.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.15](https://suttacentral.net/sn22.15){:target="_blank"} and similar to [SN 22.16](https://suttacentral.net/sn22.16){:target="_blank"} and [17](https://suttacentral.net/sn22.17){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.15" target="_blank">SN 22.15</a> and similar to <a href="https://suttacentral.net/sn22.16" target="_blank">SN 22.16-17</a>. SN 22.15-17 are variants that differ in where they begin in the argument that conditioned things are impermanent, their impermanence is painful, and painful things are not self and don’t belong to a self. I.e., SN 22.15 lists the full set of logical steps, SN 22.16 skips the first step, and SN 22.17 skips the first two steps.<br/>
+Here, SĀ 1.15-16 don’t abbreviate the logical argument for conditioned things not being self. Rather, they use two equivalent ways of expressing a noble disciple’s liberation from the aggregates. Thus, all five <em>sūtra</em>s (SN 22.15-17 and SĀ 1.15-16) could be regarding as part of a larger set of variants. [\[back\]](#ref1)
+2. {:#n2} <em>true and correct observation.</em> C. 真實正觀, P. <em>yathābhūtaṁ sammappaññāya</em>. When this expression reoccurs both here in this <em>sūtra</em> and the next, 正 (“correct”) is omitted. I’ve preserved the C. readings as they are. It seems equally likely to me that the expression has been abbreviated after the first occurrence or that 正 has been inserted in this one passage. The Pali parallel supports the former scenario. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 October 2022
+Last Revised: 19 December 2023
 {: .revised}
 
 ---
