--- a/01_agama/samyukta/01/SA1_20.md
+++ b/01_agama/samyukta/01/SA1_20.md
@@ -14,42 +14,43 @@ next: SA1_21.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “In the past, I had the pursuits and practices of enjoying form. When I realized[\[2\]](#n2){:#ref2} the enjoyment of form as a result, I truly saw it with wisdom. Thus, I had the pursuits and practices of enjoying feeling … conception … volition … consciousness. When I realized the enjoyment of feeling … conception … volition … consciousness as a result, I truly saw it with wisdom.
+2\. It was then that the Bhagavān addressed the monks, “In the past, I had pursued and practiced the enjoyment of form. When I realized the enjoyment of form as a result,[\[2\]](#n2){:#ref2} I truly saw it with wisdom. Thus, I had pursued and practiced the enjoyment of feeling … conception … volition … consciousness. When I realized the enjoyment of feeling … conception … volition … consciousness as a result, I truly saw it with wisdom.
 {:#p2}
 
-3\. “Monks, I had the pursuits and practices of form’s trouble. When I realized form’s trouble as a result, I truly saw it with wisdom. Thus, I had the pursuits and practices of feeling’s … conception’s … volition’s … consciousness’s trouble. When I realized consciousness’s trouble as a result, I truly saw it with wisdom.
+3\. “Monks, I pursued and practiced the trouble of form. When I realized form’s trouble as a result, I truly saw it with wisdom. Thus, I pursued and practiced the trouble of feeling … conception … volition … consciousness. When I realized the trouble of consciousness as a result, I truly saw it with wisdom.
 {:#p3}
 
-4\. “Monks, I had the pursuits and practices of escaping form. When I realized the escape from form as a result, I truly saw it with wisdom. Thus, I had the pursuits and practices of escaping feeling … conception … volition … consciousness. When I realized the escape from consciousness as a result, I truly saw it with wisdom.
+4\. “Monks, I pursued and practiced the escape from form. When I realized the escape from form as a result, I truly saw it with wisdom. Thus, I pursued and practiced the escape from feeling … conception … volition … consciousness. When I realized the escape from consciousness as a result, I truly saw it with wisdom.
 {:#p4}
 
-5\. “Monks, had I not truly known the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I would have forever stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I wouldn’t have been freed from, parted with, and escaped from [these aggregates]. I couldn’t have realized my attainment of the unsurpassed and complete awakening.
+5\. “Monks, had I not truly known the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I wouldn’t be freed, escaped, and parted with them. I would have forever stood in delusion among gods like Māra or Brahmā,  ascetics and priests, or the assemblies of gods and humans, and I couldn’t have realized my attainment of the unsurpassed and complete awakening.
 {:#p5}
 
-6\. “Monks, I did truly know the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, and I never again stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I was freed from, parted with, and escaped from [these aggregates]. I could realize my attainment of the unsurpassed and complete awakening.”
+6\. “Monks, it’s because I truly knew the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape that I was freed, escaped, parted, and liberated from bondage. I never again stood in delusion among gods like Māra or Brahmā,  ascetics and priests, or the assemblies of gods and humans, and I could realize my attainment of the unsurpassed and complete awakening.”
 {:#p6}
 
 7\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p7}
 
 #### Summary Verse
-* {:.verse}[11-14] The past explained in four ways,\\
-[15] Disillusionment and [16] liberation,\\
-[17-18] Two ways of explaining causes and conditions,\\
+
+* {:.verse}[11-14] The past explained in four ways,<br/>
+[15] Disillusionment and [16] liberation,<br/>
+[17-18] Two ways of explaining causes and conditions,<br/>
 [19-20] And two kinds of enjoyment.
 
 ---
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.27](https://suttacentral.net/sn22.27){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} <em>As a result … realized</em>. Ch. 隨順覺, Skt. <em>\*anubodhana</em>. [\[back\]](#ref2)
+1. {:#n1} This <em>sūtra</em> is a variant of the previous one (<a href="SA1_17.html" target="_blank">SĀ 1.19</em>). Both correspond to <a href="https://suttacentral.net/sn22.26/en/sujato" target="_blank">SN 22.26-28</a>, with this <em>sūtra</em> being closest to <a href="https://suttacentral.net/sn22.27/en/sujato" target="_blank">SN 22.27</a>. [\[back\]](#ref1)
+2. {:#n1} <em>realized … as a result</em>. Ch. 隨順覺. The parallel word in SN 22.27 is P. <em>tadajjhagama</em> (“found that”), which combines a relative pronoun with a form of P. <em>adhigacchati</em>. The C. appears to translate a different word in Prakrit that meant something like “consequently realized.” Of course, “realized” in the sense of discovering something is similar to the “found” meaning that P. <em>adhigacchati</em> can have. I wonder if the Prakrit here might have been equiv. to <em>anugacchati</em>. It would explain the prefix 隨順, which sometimes translates <em>anu-</em> in Indic words. While S. <em>gacchati</em> has meanings like the P. word (“to go, obtain, pass away”), it can also mean “to understand” or “perceive,” which matches 覺 much better. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 3 August 2023
+Last Revised: 19 December 2023
 {: .revised}
 
 ---
