--- a/01_agama/samyukta/01/SA1_23.md
+++ b/01_agama/samyukta/01/SA1_23.md
@@ -48,7 +48,7 @@ That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve under
 
 ### Notes
 
-1. {:#n1} The closest parallel for this <em>sūtra</em> appears to be <a href="https://suttacentral.net/sn22.34/en/sujato" target="_blank">SN 22.34</a>, but it does not include the a backstory or a monk who comes to ask the Buddha for a Dharma teaching. <a href="https://suttacentral.net/sn22.33/en/sujato" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. The next three <em>sūtra</em>s (<a href="SA1_24.html" target="_blank">SĀ 1.24-26</a>) are variants that substitute different principles for the monk to contemplate. [\[back\]](#ref1)
+1. {:#n1} The closest parallel for this <em>sūtra</em> appears to be <a href="https://suttacentral.net/sn22.34/en/sujato" target="_blank">SN 22.34</a>, but it does not include the a backstory or a monk who comes to ask the Buddha for a Dharma teaching. <a href="https://suttacentral.net/sn22.33/en/sujato" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. It’s also very close to <a href="https://suttacentral.net/sn22.69/en/sujato" target="_blank">SN 22.69</a>, which recommends abandoning what doesn’t belong to self. The next three <em>sūtra</em>s (<a href="SA1_24.html" target="_blank">SĀ 1.24-26</a>) are variants that substitute different principles for the monk to contemplate. [\[back\]](#ref1)
 
 ---
 
