--- a/01_agama/samyukta/01/SA1_24.md
+++ b/01_agama/samyukta/01/SA1_24.md
@@ -48,7 +48,7 @@ That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve under
 
 ### Notes
 
-1. {:#n1} This <em>sūtra</em> is a variant of the previous one (<a href="../01/SA1_23.html" target="_blank">SĀ 1.23</a>), and it has a close parallel in Pali at <a href="https://suttacentral.net/sn22.34/en/sujato" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33/en/sujato" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. The next two <em>sūtra</em>s are variants that substitute different principles for the monk to contemplate. See <a href="../01/SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is a variant of the previous one (<a href="SA1_23.html" target="_blank">SĀ 1.23</a>), and it has a close parallel in Pali at <a href="https://suttacentral.net/sn22.34/en/sujato" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33/en/sujato" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. The next two <em>sūtra</em>s are variants that substitute different principles for the monk to contemplate. See <a href="SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here. [\[back\]](#ref1)
 
 ---
 
